tests/paczka2/big_fuzzy/38457805.err
Error in line 11: A426 A426 86,1
Error in line 6: r6UuE4Esk S22 77,7
Error in line 5: mSKJ S948 93,4
Error in line 16: A426 S788 7,9
Error in line 24: hSV0R5A S948 65,8
Error in line 26: jtlF S22 81,5
Error in line 34: mSKJ A426 81,1
Error in line 32: jtlF S948 85,7
Error in line 33: A426 S948 52,3
Error in line 39: jtlF A426 40,8
Error in line 49: ?A-26
Error in line 50: dFzHZc A426 37,3
Error in line 53: dFzHZc S22 2,8
Error in line 10: PHMdUSSLNDy S948 355,7
Error in line 64: A426 S788 5,1
Error in line 67: dFzHZc S788 56,3
Error in line 86: dFzHZc S788 276,8
Error in line 85: PHMdUSSLNDy S22 80,2
Error in line 95: dFzHZc A426 20,6
Error in line 92: A426 S948 24,1
Error in line 118: r6UuE4Esk A426 5,5
Error in line 110: A426 A426 39,3
Error in line 115: jtlF S788 30,0
Error in line 122: A426 S788 52,6
Error in line 133: r6UuE4Esk S948 83,7
Error in line 140: r6UuE4Esk S788 40,5
Error in line 150: jtlF S22 35,1
Error in line 153: mSKJ A426 207,33
Error in line 148: mSKJ A426 59,4
Error in line 165: mSKJ S948 94,8
Error in line 176: mSKJ A426 139,3
Error in line 190: r6UuE4Esk S788 44,5
Error in line 189: hSV0R5A A426 43,2
Error in line 192: jtlF S948 6,4
Error in line 202: r6UuE4Esk S948 62,5
Error in line 199: dFzHZc S22 36,6
Error in line 181: A426 A426 5,5
Error in line 212: A426 S788 26,5
Error in line 211: r6UuE4Esk S948 6,0
Error in line 219: jtlF S948 39,8
Error in line 234: mSKJ A426 24,3
Error in line 236: jtlF S788 138,4
